[gd_scene load_steps=83 format=2]

[ext_resource path="res://art/enemies/green_mantis_full.png" type="Texture" id=1]
[ext_resource path="res://maps/minecart/minecartEnemy.gd" type="Script" id=2]
[ext_resource path="res://art/enemies/spider.png" type="Texture" id=3]
[ext_resource path="res://art/enemies/black_mantis_full.png" type="Texture" id=4]
[ext_resource path="res://art/enemies/yellow_mantis_full.png" type="Texture" id=5]
[ext_resource path="res://art/enemies/robot.png" type="Texture" id=6]
[ext_resource path="res://art/enemies/wasp.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 3 )
region = Rect2( 0, 26, 34, 26 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 3 )
region = Rect2( 34, 26, 34, 26 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 3 )
region = Rect2( 68, 26, 34, 26 )

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 3 )
region = Rect2( 102, 26, 34, 26 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 3 )
region = Rect2( 136, 26, 34, 26 )

[sub_resource type="AtlasTexture" id=100]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 34, 26 )

[sub_resource type="AtlasTexture" id=101]
atlas = ExtResource( 3 )
region = Rect2( 34, 0, 34, 26 )

[sub_resource type="AtlasTexture" id=102]
atlas = ExtResource( 3 )
region = Rect2( 68, 0, 34, 26 )

[sub_resource type="AtlasTexture" id=103]
atlas = ExtResource( 3 )
region = Rect2( 102, 0, 34, 26 )

[sub_resource type="AtlasTexture" id=104]
atlas = ExtResource( 3 )
region = Rect2( 34, 52, 34, 26 )

[sub_resource type="AtlasTexture" id=105]
flags = 1
atlas = ExtResource( 5 )
region = Rect2( 68, 330, 68, 66 )

[sub_resource type="AtlasTexture" id=106]
flags = 1
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 68, 66 )

[sub_resource type="AtlasTexture" id=107]
flags = 1
atlas = ExtResource( 5 )
region = Rect2( 68, 0, 68, 66 )

[sub_resource type="AtlasTexture" id=108]
flags = 1
atlas = ExtResource( 5 )
region = Rect2( 136, 0, 68, 66 )

[sub_resource type="AtlasTexture" id=109]
flags = 1
atlas = ExtResource( 5 )
region = Rect2( 204, 0, 68, 66 )

[sub_resource type="AtlasTexture" id=110]
flags = 1
atlas = ExtResource( 5 )
region = Rect2( 272, 0, 68, 66 )

[sub_resource type="AtlasTexture" id=111]
flags = 1
atlas = ExtResource( 5 )
region = Rect2( 340, 0, 68, 66 )

[sub_resource type="AtlasTexture" id=112]
flags = 1
atlas = ExtResource( 5 )
region = Rect2( 0, 66, 68, 66 )

[sub_resource type="AtlasTexture" id=113]
flags = 1
atlas = ExtResource( 5 )
region = Rect2( 68, 66, 68, 66 )

[sub_resource type="AtlasTexture" id=114]
flags = 1
atlas = ExtResource( 5 )
region = Rect2( 136, 66, 68, 66 )

[sub_resource type="AtlasTexture" id=115]
flags = 1
atlas = ExtResource( 5 )
region = Rect2( 204, 66, 68, 66 )

[sub_resource type="AtlasTexture" id=116]
flags = 1
atlas = ExtResource( 5 )
region = Rect2( 272, 66, 68, 66 )

[sub_resource type="AtlasTexture" id=117]
flags = 1
atlas = ExtResource( 5 )
region = Rect2( 340, 66, 68, 66 )

[sub_resource type="AtlasTexture" id=118]
flags = 1
atlas = ExtResource( 5 )
region = Rect2( 408, 66, 68, 66 )

[sub_resource type="AtlasTexture" id=119]
flags = 1
atlas = ExtResource( 5 )
region = Rect2( 476, 66, 68, 66 )

[sub_resource type="AtlasTexture" id=143]
atlas = ExtResource( 7 )
region = Rect2( 150, 0, 50, 70 )

[sub_resource type="AtlasTexture" id=144]
atlas = ExtResource( 7 )
region = Rect2( 0, 70, 50, 70 )

[sub_resource type="AtlasTexture" id=145]
atlas = ExtResource( 7 )
region = Rect2( 50, 70, 50, 70 )

[sub_resource type="AtlasTexture" id=150]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 50, 70 )

[sub_resource type="AtlasTexture" id=151]
atlas = ExtResource( 7 )
region = Rect2( 200, 140, 50, 70 )

[sub_resource type="AtlasTexture" id=152]
atlas = ExtResource( 7 )
region = Rect2( 50, 0, 50, 70 )

[sub_resource type="AtlasTexture" id=153]
atlas = ExtResource( 7 )
region = Rect2( 250, 140, 50, 70 )

[sub_resource type="AtlasTexture" id=135]
atlas = ExtResource( 6 )
region = Rect2( 0, 470, 160, 94 )

[sub_resource type="AtlasTexture" id=136]
atlas = ExtResource( 6 )
region = Rect2( 0, 94, 160, 94 )

[sub_resource type="AtlasTexture" id=137]
atlas = ExtResource( 6 )
region = Rect2( 160, 94, 160, 94 )

[sub_resource type="AtlasTexture" id=138]
atlas = ExtResource( 6 )
region = Rect2( 320, 94, 160, 94 )

[sub_resource type="AtlasTexture" id=139]
atlas = ExtResource( 6 )
region = Rect2( 480, 94, 160, 94 )

[sub_resource type="AtlasTexture" id=140]
atlas = ExtResource( 6 )
region = Rect2( 640, 94, 160, 94 )

[sub_resource type="AtlasTexture" id=141]
atlas = ExtResource( 6 )
region = Rect2( 800, 94, 160, 94 )

[sub_resource type="AtlasTexture" id=120]
flags = 1
atlas = ExtResource( 4 )
region = Rect2( 68, 330, 68, 66 )

[sub_resource type="AtlasTexture" id=121]
flags = 1
atlas = ExtResource( 4 )
region = Rect2( 0, 66, 68, 66 )

[sub_resource type="AtlasTexture" id=122]
flags = 1
atlas = ExtResource( 4 )
region = Rect2( 68, 66, 68, 66 )

[sub_resource type="AtlasTexture" id=123]
flags = 1
atlas = ExtResource( 4 )
region = Rect2( 136, 66, 68, 66 )

[sub_resource type="AtlasTexture" id=124]
flags = 1
atlas = ExtResource( 4 )
region = Rect2( 204, 66, 68, 66 )

[sub_resource type="AtlasTexture" id=125]
flags = 1
atlas = ExtResource( 4 )
region = Rect2( 272, 66, 68, 66 )

[sub_resource type="AtlasTexture" id=126]
flags = 1
atlas = ExtResource( 4 )
region = Rect2( 340, 66, 68, 66 )

[sub_resource type="AtlasTexture" id=127]
flags = 1
atlas = ExtResource( 4 )
region = Rect2( 408, 66, 68, 66 )

[sub_resource type="AtlasTexture" id=128]
flags = 1
atlas = ExtResource( 4 )
region = Rect2( 476, 66, 68, 66 )

[sub_resource type="AtlasTexture" id=142]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 160, 94 )

[sub_resource type="AtlasTexture" id=129]
flags = 1
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 68, 66 )

[sub_resource type="AtlasTexture" id=130]
flags = 1
atlas = ExtResource( 4 )
region = Rect2( 68, 0, 68, 66 )

[sub_resource type="AtlasTexture" id=131]
flags = 1
atlas = ExtResource( 4 )
region = Rect2( 136, 0, 68, 66 )

[sub_resource type="AtlasTexture" id=132]
flags = 1
atlas = ExtResource( 4 )
region = Rect2( 204, 0, 68, 66 )

[sub_resource type="AtlasTexture" id=133]
flags = 1
atlas = ExtResource( 4 )
region = Rect2( 272, 0, 68, 66 )

[sub_resource type="AtlasTexture" id=134]
flags = 1
atlas = ExtResource( 4 )
region = Rect2( 340, 0, 68, 66 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 1 )
region = Rect2( 0, 66, 68, 66 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 1 )
region = Rect2( 68, 66, 68, 66 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 1 )
region = Rect2( 136, 66, 68, 66 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 1 )
region = Rect2( 204, 66, 68, 66 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 1 )
region = Rect2( 272, 66, 68, 66 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 1 )
region = Rect2( 340, 66, 68, 66 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 1 )
region = Rect2( 408, 66, 68, 66 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 1 )
region = Rect2( 476, 66, 68, 66 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 1 )
region = Rect2( 68, 330, 68, 66 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 68, 66 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 1 )
region = Rect2( 68, 0, 68, 66 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 1 )
region = Rect2( 136, 0, 68, 66 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 1 )
region = Rect2( 204, 0, 68, 66 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 1 )
region = Rect2( 272, 0, 68, 66 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 1 )
region = Rect2( 340, 0, 68, 66 )

[sub_resource type="SpriteFrames" id=90]
animations = [ {
"frames": [ SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 99 ) ],
"loop": true,
"name": "spider_walk",
"speed": 10.0
}, {
"frames": [ SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ) ],
"loop": true,
"name": "spider_idle",
"speed": 5.0
}, {
"frames": [ SubResource( 104 ) ],
"loop": false,
"name": "spider_dead",
"speed": 5.0
}, {
"frames": [ SubResource( 105 ) ],
"loop": false,
"name": "yellow_mantis_dead",
"speed": 5.0
}, {
"frames": [ SubResource( 106 ), SubResource( 107 ), SubResource( 108 ), SubResource( 109 ), SubResource( 110 ), SubResource( 111 ) ],
"loop": true,
"name": "yellow_mantis_idle",
"speed": 10.0
}, {
"frames": [ SubResource( 112 ), SubResource( 113 ), SubResource( 114 ), SubResource( 115 ), SubResource( 116 ), SubResource( 117 ), SubResource( 118 ), SubResource( 119 ) ],
"loop": true,
"name": "yellow_mantis_walk",
"speed": 10.0
}, {
"frames": [ SubResource( 143 ) ],
"loop": true,
"name": "wasp_dead",
"speed": 5.0
}, {
"frames": [ SubResource( 144 ), SubResource( 145 ) ],
"loop": true,
"name": "wasp_walk",
"speed": 15.0
}, {
"frames": [ SubResource( 150 ), SubResource( 151 ), SubResource( 150 ), SubResource( 151 ), SubResource( 150 ), SubResource( 151 ), SubResource( 152 ), SubResource( 153 ), SubResource( 152 ), SubResource( 153 ), SubResource( 152 ), SubResource( 153 ) ],
"loop": true,
"name": "wasp_idle",
"speed": 15.0
}, {
"frames": [ SubResource( 135 ) ],
"loop": true,
"name": "robot_dead",
"speed": 5.0
}, {
"frames": [ SubResource( 136 ), SubResource( 137 ), SubResource( 138 ), SubResource( 139 ), SubResource( 140 ), SubResource( 141 ) ],
"loop": true,
"name": "robot_walk",
"speed": 8.0
}, {
"frames": [ SubResource( 120 ) ],
"loop": true,
"name": "black_mantis_dead",
"speed": 5.0
}, {
"frames": [ SubResource( 121 ), SubResource( 122 ), SubResource( 123 ), SubResource( 124 ), SubResource( 125 ), SubResource( 126 ), SubResource( 127 ), SubResource( 128 ) ],
"loop": true,
"name": "black_mantis_walk",
"speed": 10.0
}, {
"frames": [ SubResource( 142 ) ],
"loop": true,
"name": "robot_idle",
"speed": 5.0
}, {
"frames": [ SubResource( 129 ), SubResource( 130 ), SubResource( 131 ), SubResource( 132 ), SubResource( 133 ), SubResource( 134 ) ],
"loop": true,
"name": "black_mantis_idle",
"speed": 10.0
}, {
"frames": [ SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ) ],
"loop": true,
"name": "green_mantis_walk",
"speed": 10.0
}, {
"frames": [ SubResource( 89 ) ],
"loop": false,
"name": "green_mantis_dead",
"speed": 5.0
}, {
"frames": [ SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ) ],
"loop": true,
"name": "green_mantis_idle",
"speed": 10.0
} ]

[sub_resource type="BoxShape" id=91]
extents = Vector3( 1, 1.5, 1 )

[sub_resource type="CylinderMesh" id=92]
top_radius = 1.5
bottom_radius = 1.5
height = 0.1

[sub_resource type="CylinderShape" id=94]
resource_local_to_scene = true
radius = 35.0
height = 40.0

[sub_resource type="CapsuleShape" id=93]
resource_local_to_scene = true
height = 1.5

[node name="Enemy" type="KinematicBody"]
collision_layer = 16
collision_mask = 18434
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 1184.0
margin_right = 1280.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="zeroPoint" type="Spatial" parent="."]

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="zeroPoint"]
transform = Transform( -1, -2.26266e-08, -8.4444e-08, 0, 0.965926, -0.258819, 8.74228e-08, -0.258819, -0.965926, 0, 0, 0 )
offset = Vector2( 0, 32 )
pixel_size = 0.07
frames = SubResource( 90 )
animation = "green_mantis_idle"
frame = 2
playing = true

[node name="hurtbox" type="Area" parent="zeroPoint"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.5, 0 )
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="zeroPoint/hurtbox"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 91 )

[node name="shadowMaker" type="MeshInstance" parent="zeroPoint"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
cast_shadow = 3
mesh = SubResource( 92 )
material/0 = null

[node name="aggro" type="Area" parent="zeroPoint"]
collision_layer = 0
collision_mask = 32768
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="zeroPoint/aggro"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )
shape = SubResource( 94 )

[node name="CollisionShapeGround" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.75, 0 )
shape = SubResource( 93 )

[node name="stunTimer" type="Timer" parent="."]
one_shot = true

[node name="despawnTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="zeroPoint/hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="area_entered" from="zeroPoint/aggro" to="." method="_on_aggro_area_entered"]
[connection signal="timeout" from="stunTimer" to="." method="_on_stunTimer_timeout"]
[connection signal="timeout" from="despawnTimer" to="." method="_on_despawnTimer_timeout"]
